# GIS-Evo

./: .gitignore  README.md  meson.build  test_bool_size.cpp
gtk4_app/: README.md  meson.build
gtk4_app/include/: map_selector.hpp  map_view.hpp
gtk4_app/src/: main.cpp  map_selector.cpp  map_view.cpp
main/src/: main.cpp
src/: LatLon.h  OSMDatabaseAPI.h  StreetsDatabaseAPI.h  external_api_impl.cpp  globals.h  gtk4_types.hpp  m1.cpp  m1.h  m2.cpp  m2.h  m3.cpp  m3.h  m4.h  meson.build  ms1helpers.cpp  ms2helpers.cpp  ms2helpers.hpp  ms3helpers.cpp  ms3helpers.hpp  ms4helpers.cpp  ms4helpers.hpp  struct.h
src/Coordinates_Converstions/: convert_coords.cpp  coords_conversions.hpp  get_zoom_level.cpp  map_bounds.cpp
src/Intersections/: intersection_setup.cpp
src/OSMEntity_Helpers/: m2_way_helpers.cpp  m2_way_helpers.hpp  sort_features.cpp  typed_osmid_helper.cpp  typed_osmid_helper.hpp
src/POI/: POI_helpers.cpp  POI_helpers.hpp  POI_setup.cpp  POI_setup.hpp
src/binary_loader/: binary_database.cpp  binary_database.hpp  cache_io_helpers.cpp  cache_io_helpers.hpp  cache_manager.cpp  cache_manager.hpp  cache_serializer.cpp  cache_serializer.hpp  database_loader.hpp  mmap_helpers.cpp  mmap_helpers.hpp  test_cache_aware_loading.cpp  test_cache_error_handling.cpp  test_cache_format.cpp  test_cache_integration.cpp  test_cache_manager.cpp  test_cache_performance.cpp  test_cache_performance_validation.cpp
src/core/: README.md  main.cpp  map_data.cpp  map_data.hpp  meson.build  renderer.cpp  renderer.hpp  test_cache_debug.cpp  test_features.cpp  test_integration.cpp  test_performance_regression.cpp  test_simple.cpp  types.hpp  ui.cpp  ui.hpp
src/courier/: courier_types.hpp  traveling_courier.cpp  traveling_courier.hpp
src/include/: bounding_box.hpp
src/m3_algo/: astaralgo.cpp  astaralgo.hpp
src/pathfinding/: astar.cpp  astar.hpp
src/sort_streetseg/: colour_streets.cpp  streetsegment_info.hpp
src/spatial_hash/: benchmark_spatial_index.cpp  rtree.hpp  rtree_serialization_impl.hpp  rtree_test.cpp  rtree_validation_test.cpp  simple_spatial_index.hpp
tools/osm_converter/: README.md  meson.build
tools/osm_converter/include/converter/: converter.hpp  schema.hpp
tools/osm_converter/src/: converter.cpp  main.cpp
tools/xml_to_pbf_converter/: README.md  meson.build
tools/xml_to_pbf_converter/include/converter/: converter.hpp
tools/xml_to_pbf_converter/src/: converter.cpp  main.cpp
